--- a/versuche/glal4/lichtquanten/lichtquanten.tex
+++ b/versuche/glal4/lichtquanten/lichtquanten.tex
@@ -12,6 +12,11 @@
     \include{sections/auswertung}
     \include{sections/fehlerrechnung}
     \include{sections/diskussion}
-%    \printbibliography
+    
+    \addcontentsline{toc}{section}{Literatur}
+    \newpage\printbibliography
+
+    \clearpage\appendix
+    \input{sections/appendix}
 \end{document}
 
