--- a/versuche/glal4/lichtquanten/preamble/packages.tex
+++ b/versuche/glal4/lichtquanten/preamble/packages.tex
@@ -6,7 +6,7 @@
 \usepackage{float}
 \usepackage{wrapfig}
 \usepackage{amsmath}
-\usepackage[backend=bibtex,citestyle=verbose-ibid,bibstyle=numeric,sorting=nyt]{biblatex}
+\usepackage[backend=bibtex,bibstyle=numeric,sorting=nyt]{biblatex}
 \usepackage[toc,page]{appendix}
 \usepackage{siunitx}
 \usepackage{subcaption}
@@ -19,4 +19,27 @@
 \usetikzlibrary{patterns}
 \usetikzlibrary{plotmarks}
 \pgfplotsset{compat=1.11}
+
+% For python code
+\usepackage{listings}
+\usepackage{color} %red, green, blue, yellow, cyan, magenta, black, white
+\definecolor{mygreen}{RGB}{28,172,0} % color values Red, Green, Blue
+\definecolor{mylilas}{RGB}{170,55,241}
+\lstset{language=Python,%
+    xleftmargin=0.5cm,%
+    basicstyle=\smaller,%
+    breaklines=true,%
+    morekeywords={matlab2tikz},
+    keywordstyle=\color{blue},%
+    morekeywords=[2]{1}, keywordstyle=[2]{\color{black}},
+    identifierstyle=\color{black},%
+    stringstyle=\color{mylilas},
+    commentstyle=\color{mygreen},%
+    showstringspaces=false,%without this there will be a symbol in the places where there is a space
+    numbers=left,%
+    numberstyle={\tiny \color{black}},% size of the numbers
+    numbersep=9pt, % this defines how far the numbers are from the text
+    emph=[1]{for,end,break},emphstyle=[1]\color{red}, %some words to emphasise
+    %emph=[2]{word1,word2}, emphstyle=[2]{style},    
+}
 
